[tool.poetry]
name = "hoodproxy"
version = "0.1.0"
description = "A simple TCP/UDP Proxy"
authors = ["Warren Hood <nullbyte001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
hoodproxy = "hoodproxy.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

